[package]
name = "meta"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-meta/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "meta"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }

sc-cli = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-service = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }

# Local Dependencies
meta-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { optional = true, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.36" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"meta-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["meta-runtime/try-runtime", "try-runtime-cli/try-runtime"]
