[package]
name = 'meta-runtime'
version = '0.0.0'
description = 'Aria Meta Network Runtime'
authors = ['Aria Health <https://github.com/AriaHealth>']
homepage = 'https://myaria.health'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/AriaHealth/meta'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

# Dependencies
[dependencies.smallvec]
version = "1.8.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.2.1'

[dependencies.log]
default-features = false
version = "0.4.17"


# Aria Pallets
[dependencies.pallet-social-network]
default-features = false
version = '0.0.0'
path = '../pallets/social-network'


[dependencies.pallet-marketplace]
default-features = false
version = '0.0.0'
path = '../pallets/marketplace'

[dependencies.pallet-meta-registry]
default-features = false
version = '0.0.0'
path = '../pallets/meta-registry'

[dependencies.pallet-key-registry]
default-features = false
version = '1.0.0'
path = '../pallets/key-registry'

[dependencies.pallet-template]
default-features = false
path = '../pallets/x-template-pallet'
version = '3.0.0-monthly-2021-10'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = "polkadot-v0.9.32"
default-features = false

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = "polkadot-v0.9.32"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.3.0'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-template/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
]
std = [
	# Aria pallet
	'pallet-key-registry/std',
	'pallet-social-network/std',
	'pallet-meta-registry/std',
	'pallet-template/std',

	# Substrate dependencies
	'codec/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'log/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-grandpa/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'scale-info/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
]
