[package]
name = 'healthcare'
version = '0.0.0'
description = 'Pallet for storing meta information'
authors = ['Aria Health <https://github.com/AriaHealth>']
homepage = 'https://myaria.health'
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/AriaHealth/meta'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'


[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[features]
default = ['std']
std = ['codec/std', 'scale-info/std', 'frame-support/std', "sp-std/std"]
