[package]
name = 'pallet-marketplace'
version = '0.0.0'
description = 'Pallet for decentralized public key infrastructures'
authors = ['Aria Health <https://github.com/AriaHealth>']
homepage = 'https://myaria.health'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/AriaHealth/meta'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.2.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = "polkadot-v0.9.32"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.3.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
