[package]
name = "pallet-example-offchain-worker"
version = "0.0.0"
branch = "polkadot-v0.9.32"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = [
	"derive",
] }

# Substrate packages

sp-keystore = { branch = "polkadot-v0.9.32", git = 'https://github.com/paritytech/substrate.git', optional = true }
frame-support = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
frame-system = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-core = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-io = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-std = { branch = "polkadot-v0.9.32", default-features = false, git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
