[package]
name = 'healthcare'
version = '0.0.0'
description = 'Pallet for storing meta information'
authors = ['Aria Health <https://github.com/AriaHealth>']
homepage = 'https://myaria.health'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/AriaHealth/meta'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.2.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.3.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.32"

[features]
default = ['std']
std = ['codec/std', 'scale-info/std', 'frame-support/std', "sp-std/std"]
