[package]
name = 'pallet-tmp'
version = '3.0.0-monthly-2021-10'
description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Aria Health <https://github.com/AriaHealth>']
homepage = 'https://myaria.health'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-meta/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.2.1"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = "2.3.0"

[dependencies.frame-benchmarking]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
version = '4.0.0-dev'

[dependencies.frame-support]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.frame-system]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dev-dependencies.sp-core]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "7.0.0"

[dev-dependencies.sp-io]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "7.0.0"

[dev-dependencies.sp-runtime]
branch = "master"
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "7.0.0"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
